# Rust-Text-Editor-Gui

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  file.json
data/: file.py
runtime/queries/json/: highlights.scm
runtime/queries/python/: highlights.scm
runtime/themes/: default.toml  gruvbox.toml
src/: buffer.rs  config.rs  draw.rs  editor.rs  fs.rs  highlight.rs  lib.rs  lsp.rs  lsp_ext.rs  main.rs  style_layer.rs  theme.rs  tree.rs
tests/: fuzz.rs
