[package]
name = "rust-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
ropey = "1.3.1"
tree-sitter = "0.20.0"
serde = "1.0.130"
toml = "0.5.8"
lazy_static = "1.4.0"
itertools = "0.10.1"
lsp-types = "0.91.1"
serde_json = "1.0.71"
anyhow = "1.0.45"
jsonrpc-core = "18.0.0"

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[build-dependencies]
cc = "*"
