[package]
name = "rust-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "ste_lib"
path = "src/lib.rs"

[[bin]]
name = "ste"
path = "src/main.rs"

[dependencies]
druid = "0.7.0"
ropey = "1.3.1"
tree-sitter = "0.20.0"
toml = "0.5.8"
lazy_static = "1.4.0"
itertools = "0.10.1"
lsp-types = "0.91.1"
serde_json = "1.0.71"
anyhow = "1.0.45"
jsonrpc-core = "18.0.0"
parking_lot = {version = "0.11.2", features = ["deadlock_detection"]}

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[build-dependencies]
cc = "*"

[dev-dependencies]
rand = "0.8.4"
